updates in ui and content and put description in sw

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "Codexus",
+    "name": "MPC - Codexus",
+    "description": "Hi! I'm Mark Paul, I'm a Full Stack Web Developer and Welcome to my Portfolio",
     "short_name": "Codexus - Portfolio",
     "start_url": "./",
     "background_color": "#FFDCB5",
