--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
     "name": "MPC - Codexus",
+    "author": "Mark Paul Cañeda",
     "description": "Hi! I'm Mark Paul, I'm a Full Stack Web Developer and Welcome to my Portfolio",
     "short_name": "Codexus - Portfolio",
     "start_url": "./",
