--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Hi! I'm Mark Paul, I'm a Full Stack Web Developer and Welcome to my Portfolio",
+    "name": "Hello there! I'm Mark Paul, I'm a Full Stack Web Developer",
     "short_name": "Full Stack Web Developer | Codexus",
     "start_url": "./",
     "background_color": "#FFDCB5",
@@ -18,6 +18,6 @@
             "purpose": "maskable any"
         }
     ],
-    "display": "fullscreen",
+    "display": "standalone",
     "orientation":"portrait"
 }
