--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,31 @@
     "name": "Hello there! I'm Mark Paul, I'm a Full Stack Web Developer",
     "short_name": "Full Stack Web Developer | Codexus",
     "start_url": "./",
+    "shortcuts": [
+        {
+            "name": "Activity Feed",
+            "short_name": "Feed",
+            "description": "View your activity feed",
+            "url": "/feed?utm_source=homescreen",
+            "icons": [{ "src": "assets/media/logo-brand-192.png", "sizes": "192x192" }]
+        }
+    ],
+    "share_target": {
+        "action": "/share-photo",
+        "method": "POST",
+        "enctype": "multipart/form-data",
+        "params": {
+            "title": "name",
+            "text": "description",
+            "url": "link",
+            "files": [
+                {
+                "name": "photos",
+                "accept": "image/png"
+                }
+            ]
+        }
+    },
     "background_color": "#FFDCB5",
     "theme_color": "#ffffff",
     "icons": [
