--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
 {
-    "name": "Hello there! I'm Mark Paul, I'm a Full Stack Web Developer",
-    "short_name": "Full Stack Web Developer | Codexus",
+    "name": "Codexus",
     "start_url": "./",
     "shortcuts": [
         {
